--- a/software/stacks/foundation/airflow/hostk8s.secrets.yaml
+++ b/software/stacks/foundation/airflow/hostk8s.secrets.yaml
@@ -26,7 +26,7 @@ spec:
           generate: password
           length: 16
         - key: host
-          value: postgres-cluster-rw.postgres.svc.cluster.local
+          value: airflow-db-rw.postgres.svc.cluster.local
         - key: database
           value: airflow
     # pgAdmin4 web UI credentials (postgres component dependency)
