--- a/software/stacks/foundation/airflow/stack.yaml
+++ b/software/stacks/foundation/airflow/stack.yaml
@@ -4,7 +4,7 @@
 ######################
 
 ---
-# Application: Airflow component (includes database setup)
+# Application: Airflow component (self-contained with dependencies)
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
@@ -20,13 +20,13 @@ spec:
   path: ./software/components/airflow
   prune: true
   wait: true
-  # healthChecks:
-  #   - kind: Deployment
-  #     name: airflow-webserver
-  #     namespace: airflow
-  #   - kind: Deployment
-  #     name: airflow-scheduler
-  #     namespace: airflow
+  healthChecks:
+    - kind: Deployment
+      name: airflow-webserver
+      namespace: airflow
+    - kind: Deployment
+      name: airflow-scheduler
+      namespace: airflow
 
 # ---
 # # Configuration: Example DAGs
