--- a/software/components/airflow/before/cluster.yaml
+++ b/software/components/airflow/before/cluster.yaml
@@ -49,7 +49,7 @@ spec:
   # Storage configuration - use storage contract
   storage:
     size: 5Gi
-    storageClass: airflow-db
+    storageClass: airflow-storage
     pvcTemplate:
       accessModes:
         - ReadWriteOnce
