--- a/software/components/airflow/main/secret.yaml
+++ b/software/components/airflow/main/secret.yaml
@@ -85,7 +85,7 @@ spec:
     template:
       engineVersion: v2
       data:
-        connection: "postgresql+psycopg2://{{ .username }}:{{ .password }}@{{ .host }}:5432/{{ .database }}"
+        connection: "postgresql+psycopg2://{{ .username }}:{{ .password | urlquery }}@{{ .host }}:5432/{{ .database }}"
   dataFrom:
     - extract:
         key: airflow/airflow-db-credentials
