--- a/software/components/airflow/main/job.yaml
+++ b/software/components/airflow/main/job.yaml
@@ -28,7 +28,7 @@ spec:
         - -c
         - |
           echo "Waiting for Airflow API server to be ready..."
-          until nc -z airflow-api-server.airflow.svc.cluster.local 8080; do
+          until timeout 1 bash -c 'cat < /dev/null > /dev/tcp/airflow-api-server.airflow.svc.cluster.local/8080' 2>/dev/null; do
             echo "Airflow API server not ready yet, waiting..."
             sleep 10
           done
