--- a/software/components/airflow/main/job.yaml
+++ b/software/components/airflow/main/job.yaml
@@ -88,6 +88,8 @@ spec:
               key: connection
         - name: AIRFLOW__CORE__EXECUTOR
           value: LocalExecutor  # Use LocalExecutor for admin operations
+        - name: AIRFLOW__CORE__AUTH_MANAGER
+          value: "airflow.providers.fab.auth_manager.fab_auth_manager.FabAuthManager"
         - name: AIRFLOW__CORE__LOAD_DEFAULT_CONNECTIONS
           value: "False"
         - name: AIRFLOW__CORE__LOAD_EXAMPLES
