optimize: reduce scheduler memory to 1Gi for LocalExecutor
- requests: 500Mi, limits: 1Gi (down from 3Gi)
- Start conservative and scale up only if OOM detected
- Total Airflow memory usage now ~1.5Gi vs original 5Gi

--- a/software/components/airflow/main/release.yaml
+++ b/software/components/airflow/main/release.yaml
@@ -84,10 +84,10 @@ spec:
       resources:
         limits:
           cpu: 1000m
-          memory: 3Gi  # Increased for LocalExecutor task execution
+          memory: 1Gi  # Conservative start, scale up if needed
         requests:
           cpu: 200m
-          memory: 1Gi
+          memory: 500Mi
 
     # Worker configuration - disabled for LocalExecutor
     workers:
