--- a/software/components/istio/ambient-dataplane.yaml
+++ b/software/components/istio/ambient-dataplane.yaml
@@ -5,7 +5,7 @@
 
 ---
 # Istio CNI Plugin (required for Ambient mode)
-apiVersion: helm.toolkit.fluxcd.io/v2beta1
+apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: istio-cni
@@ -44,7 +44,7 @@ spec:
 
 ---
 # ZTunnel (Zero Trust Tunnel for L4 networking)
-apiVersion: helm.toolkit.fluxcd.io/v2beta1
+apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: ztunnel
