--- a/software/components/istio/control-plane.yaml
+++ b/software/components/istio/control-plane.yaml
@@ -5,7 +5,7 @@
 
 ---
 # Istio Base (CRDs and foundational components)
-apiVersion: helm.toolkit.fluxcd.io/v2beta1
+apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: istio-base
@@ -36,7 +36,7 @@ spec:
 
 ---
 # Istio Control Plane (istiod)
-apiVersion: helm.toolkit.fluxcd.io/v2beta1
+apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: istiod
