--- a/software/components/airflow/main/ingress.yaml
+++ b/software/components/airflow/main/ingress.yaml
@@ -21,6 +21,6 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: airflow-webserver
+            name: airflow-api-server
             port:
               number: 8080
