--- a/software/components/elasticsearch/kibana/kibana.yaml
+++ b/software/components/elasticsearch/kibana/kibana.yaml
@@ -46,5 +46,5 @@ spec:
               memory: 512Mi
               cpu: 100m
             limits:
-              memory: 1Gi
+              memory: 768Mi
               cpu: 500m
